--- a/menu-top-AXL.css
+++ b/menu-top-AXL.css
@@ -22,7 +22,7 @@
          border-bottom: 0px solid #1890ff!important;
         
 }
-.custom-menu-item .ant-menu-title-content:hover {
+.custom-menu-item .ant-menu-horizontal>.ant-menu-item a:hover {
      color: #fff!important;
 }
 
