--- a/menu-top-AXL.css
+++ b/menu-top-AXL.css
@@ -15,7 +15,7 @@
 .custom-menu-item .custom-link:hover {
          border-bottom: 0px solid #1890ff;
          color: #fff!important;
-         background: #6543bd!important;
+         background: #6a9887!important;
 }
 */
 .custom-menu-item .custom-link:hover {
