menu-top-AXL.css

--- a/menu-top-AXL.css
+++ b/menu-top-AXL.css
@@ -31,7 +31,7 @@ button.ant-btn.ant-btn-circle.ant-btn-link.ant-btn-icon-only.bg-gray-3.secondary
 */
 .custom-menu-item .custom-link:hover {
          border-bottom: 0px solid #1890ff!important;
-          
+         background: #ffffff00!important; 
 }
 .custom-menu-item .ant-menu-horizontal>.ant-menu-item a:hover {
      color: #fff!important;
