menu-top-AXL.css

--- a/menu-top-AXL.css
+++ b/menu-top-AXL.css
@@ -26,7 +26,7 @@ button.ant-btn.ant-btn-circle.ant-btn-link.ant-btn-icon-only.bg-gray-3.secondary
 .custom-menu-item .custom-link:hover {
          border-bottom: 0px solid #1890ff;
          color: #fff!important;
-         background: #6a9887!important;
+       /*  background: #6a9887!important;*/
 }
 */
 .custom-menu-item .custom-link:hover {
