--- a/menu-top-AXL.css
+++ b/menu-top-AXL.css
@@ -82,6 +82,6 @@ button.ant-btn.ant-btn-circle.ant-btn-link.ant-btn-icon-only.bg-gray-3.secondary
 }
 
 .ant-drawer .ant-menu-vertical .custom-menu-item .custom-link:hover {
-  background-color: #6a9887;
+/*  background-color: #6a9887;*/
   color: #1769aa;
 }
