menu-top-AXL.css

--- a/menu-top-AXL.css
+++ b/menu-top-AXL.css
@@ -22,7 +22,10 @@ button.ant-btn.ant-btn-circle.ant-btn-link.ant-btn-icon-only.bg-gray-3.secondary
   border-radius: 10px;
   transition: background-color .2s ease, color .2s ease;
 }
-
+.custom-menu-item .custom-link:hover {
+    border-bottom: 0px solid #1890ff !important;
+    background:  !important;
+}
 .custom-menu-item .custom-link:hover,
 a.custom-link:hover {
          border-bottom: 0px solid #1890ff!important;
